# valar_morghulis_api

./: .gitignore  Dockerfile  Pipfile  README.md  alembic.ini  docker-compose.yml  prestart.sh  pyproject.toml  setup.cfg  tasks.py
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 20200624_0a204463c560_create_user_table.py  20200624_7a6f08f16643_create_user_table.py  20200625_c363bc6838de_create_full_database.py  20200626_3ab6f8ad3b40_create_full_database_fix.py  20200626_496ab12f7ccb_create_full_database_fix.py  20200626_939da43d4127_create_full_database_fix.py  20200626_b6207568ff00_create_full_database.py  20200630_712d2d7101a3_update_article.py  20200630_dadfd0e919f1_create_full_database.py  f76a9bdf3478_create_user_table.py
ansible/: ansible.cfg  hosts.yml  infra.yml  requirements.yml  valar_morghulis.yml
ansible/group_vars/all/: vars.yml  vault.yml
ansible/templates/: docker-compose.yml.j2  traefik.yml.j2
app/: config.py  main.py  models.py  security.py
app/api/: deps.py  routes.py
app/api/endpoints/: articles.py  login.py  users.py
app/crud/: __init__.py  base.py  crud_article.py  crud_file.py  crud_user.py
app/db/: mixins.py  models.py  session.py
app/schemas/: __init__.py  article.py  file.py  token.py  user.py
app/tests/: conftest.py  utils.py
app/tests/api/: test_articles.py  test_login.py  test_users.py
code/: main.py  models.py  schema.py
code/alembic/: env.py
code/alembic/versions/: 702c580ff46a_update_user.py  75d43a475b02_first_migration.py  7bdd9c421cc0_test.py  d281aa001b7b_update_user.py
code/app/: main.py  models.py  security.py
code/app/api/: routes.py
code/app/api/endpoints/: users.py
code/app/crud/: crud_user.py
code/app/db/: session.py
code/app/schemas/: token.py  user.py
docs/specs/: specifications_V1.md
docs/subject/: subject.md
documentations/specs/: encryption.md  specifications.md  traitements.md
scripts/initdb/: create_extensions.sh
